Update controller, service, and gitignore